--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "typescript": "~5.1.3"
   },
   "dependencies": {
+    "@aws-cdk/lambda-layer-kubectl-v26": "^2.0.1",
     "aws-cdk-lib": "^2.86.0",
     "constructs": "^10.0.0",
     "source-map-support": "^0.5.21"
